--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -453,3 +453,8 @@ jobs:
             const ymlChanges = changedFiles.includes('.github/workflows/build.yml');
             return boardChanges.length < appChanges.length || ymlChanges ? 'true' : 'false';
           result-encoding: string
+  include:
+      - board: seeeduino_xiao_ble
+        shield: SHADOW_SPT_left
+      - board: seeeduino_xiao_ble
+        shield: SHADOW_SPT_right
